Mon May 14 23:46:25 BST 2001  Colin Watson  <cjwatson@debian.org>

	* Version: 2.3.18.

	* README: Add contact details.

	* libdb/stamp-h: Removed.
	* GNUmakefile.in, libdb/Makefile.in: Updated accordingly.

	* src/man_db.conf.in: FHS 2.1 has /usr/local/share/man as the
	  location of locally installed man pages rather than
	  /usr/local/man. Accordingly, the MANDB_MAP for /usr/local/man is
	  now /var/cache/man/oldlocal, and /usr/local/share/man takes over
	  /var/cache/man/local.

	* po/cs.po, po/de.po, po/es.po, po/fr.po, po/it.po, po/ja.po: Update
	  with msgmerge.

Mon May 14 22:18:32 BST 2001  Colin Watson  <cjwatson@debian.org>

	* src/security.c: Count how many times drop_effective_privs() has
	  been called, and don't actually regain privileges until
	  regain_effective_privs() has been called an equal number of times.
	  This should flush out several subtle bugs.

	* src/mandb.c: Call manpath() rather than read_config_file() (this
	  was changed while merging 2.3b12). Otherwise 'mandb --user-db'
	  segfaults as manp never gets set.

Sun May 13 18:34:33 BST 2001  Colin Watson  <cjwatson@debian.org>

	* GNUmakefile.in (dist): Don't install po/Makefile.in.

	* src/stamp-h: Removed.
	* GNUmakefile.in, src/Makefile.in: Updated accordingly.

	* GNUmakefile.in (distclean): Don't clean configure, src/lexgrog.c,
	  zsoelim/zsoelim.c.
	  (realclean): Clean configure here instead. realclean targets in
	  subdirs already remove the other two.
	* zsoelim/Makefile.in (clean): Let realclean remove zsoelim.c.

Sun May 13 17:17:32 BST 2001  Colin Watson  <cjwatson@debian.org>

	* man/Makefile.in: Another try to get NLS installation working
	  properly. The last change was wrong when LINGUAS was unset.

	* GNUmakefile.in (dist): Install docs/manpage.example.

Sun May 13 16:54:01 BST 2001  Colin Watson  <cjwatson@debian.org>

	* man/Makefile.in: Exclude NLS directories without man pages, as CVS
	  can't delete directories quite as fully as I'd like.
